--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -111,6 +111,15 @@ img {
   clear: both;
 }
 
+/* line 37, ../sass/_base.sass */
+.animate, .modal_bg {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
 /* line 13, ../sass/_grids.sass */
 .container {
   max-width: 1100px;
@@ -493,4 +502,107 @@ blockquote {
   width: 47.05882%;
   float: left;
   margin-left: 0;
+}
+
+/************************************************************************************
+ * Modal window
+ ************************************************************************************ */
+/* line 4, ../sass/_modal.sass */
+.modal_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: 0;
+  overflow: auto;
+  padding: 10px;
+  visibility: hidden;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.71);
+  z-index: 100;
+  -webkit-overflow-scrolling: touch;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+/* line 23, ../sass/_modal.sass */
+.modal_bg.visible {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+/* line 28, ../sass/_modal.sass */
+.modal_window {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-width: 90%;
+  min-width: 20%;
+  max-height: 98%;
+  width: 404px;
+  margin: auto;
+  padding: 10px 22px;
+  opacity: 0;
+  display: table;
+  overflow: auto;
+  visibility: hidden;
+  background-color: #fff;
+  z-index: 102;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  transform: scale(0.7);
+  -webkit-transition: transform 0.4s ease;
+  -moz-transition: transform 0.4s ease;
+  -o-transition: transform 0.4s ease;
+  transition: transform 0.4s ease;
+}
+/* line 56, ../sass/_modal.sass */
+.modal_window--full {
+  max-width: 960px;
+  width: auto;
+  padding: 6px 30px 20px;
+}
+
+/* line 61, ../sass/_modal.sass */
+.modal_window.visible {
+  visibility: visible !important;
+  opacity: 1 !important;
+  -webkit-transform: scale(1) !important;
+  -moz-transform: scale(1) !important;
+  transform: scale(1) !important;
+}
+
+/* line 70, ../sass/_modal.sass */
+.modal__title {
+  margin: 10px 0;
+  text-align: center;
+  font-size: 21px;
+  font-weight: 700;
+}
+
+/* line 77, ../sass/_modal.sass */
+.modal_window input,
+.modal_window textarea,
+.modal_window select,
+.modal_window option {
+  width: 100%;
+  height: 46px;
+  margin: 9px 0;
+  padding: 0 20px;
+  line-height: 46px;
+  box-sizing: border-box;
+  font-size: 21px;
+  font-weight: 300;
+  border: 1px solid #dedede;
+  border-radius: 0;
+}
+/* line 92, ../sass/_modal.sass */
+.modal_window textarea {
+  min-height: 156px;
+  padding: 15px 20px;
+  line-height: 1;
 }
