--- a/lib/sass/_base.sass
+++ b/lib/sass/_base.sass
@@ -33,3 +33,10 @@ img
         line-height: 0
         visibility: hidden
         clear: both
+
+.animate
+    -webkit-transition: all .5s ease
+    -moz-transition: all .5s ease
+    -ms-transition: all .5s ease
+    -o-transition: all .5s ease
+    transition: all .5s ease
