--- a/lib/sass/style.sass
+++ b/lib/sass/style.sass
@@ -7,7 +7,12 @@
 
 @import base
 @import grids
+
+@import page/header
+@import page/footer
+@import page/sidebar
+
 @import screen
 
+@import carousel
 @import modal
-
