--- a/lib/sass/_grids.sass
+++ b/lib/sass/_grids.sass
@@ -3,8 +3,8 @@
 
 @import susy
 
-//$susy: (columns: 3, gutters: 1/5, math: fluid, output: float, gutter-position: before, container: 1100px, container-position: center)
-$susy: (columns: 3, gutters: 1/5, math: fluid, output: float, gutter-position: before, container: 1100px, container-position: center, debug: (image: show, color: rgba(#000, .05), output: background, toggle: top right))
+$susy: (columns: 3, gutters: 1/5, math: fluid, output: float, gutter-position: before, container: 1100px, container-position: center)
+//$susy: (columns: 3, gutters: 1/5, math: fluid, output: float, gutter-position: before, container: 1100px, container-position: center, debug: (image: show, color: rgba(#000, .05), output: background, toggle: top right))
 
 
 //h1, h2, h3, h4, h5, h6, p, img, iframe, video
