--- a/lib/sass/_screen.sass
+++ b/lib/sass/_screen.sass
@@ -182,3 +182,134 @@ blockquote
 
 
 
+
+.expert
+    @include margin-trailer(2)
+
+.expert__title
+    @include margin-leader(2)
+    @include margin-trailer(1)
+    @include adjust-font-size-to(31px)
+
+.ex-slider
+    position: relative
+
+.ex-slider__content
+    position: relative
+    width: 665 * 100 / 1100 + 0%
+    float: left
+
+.ex-slider__content__item
+    position: absolute
+    padding-right: 165 * 100 / 665 + 0%
+    @include padding-trailer(1)
+    opacity: 0
+    visibility: hidden
+    -webkit-transition: all .5s ease
+    -moz-transition: all .5s ease
+    -ms-transition: all .5s ease
+    -o-transition: all .5s ease
+    transition: all .5s ease
+
+    &.is-active
+        opacity: 1
+        visibility: visible
+
+.ex-slider__experts
+    font-weight: 700
+    display: block
+
+.ex-slider__text
+    font-style: italic
+
+.ex-slider__pic
+    position: relative
+    width: 560 * 100 / 1100 + 0%
+    height: 360px
+    left: 665 * 100 / 1100 + 0%
+
+.ex-slider__pic__item
+    position: absolute
+    opacity: 0
+    visibility: hidden
+    -webkit-transition: all .5s ease
+    -moz-transition: all .5s ease
+    -ms-transition: all .5s ease
+    -o-transition: all .5s ease
+    transition: all .5s ease
+
+    &.is-active
+        opacity: 1
+        visibility: visible
+
+.ex-slider__control
+    position: absolute
+    bottom: 0
+
+
+.btn-slider__control
+    width: 18px
+    height: 1.8125rem
+    display: inline-block
+    background: blue
+    cursor: pointer
+
+
+
+.company
+    @extend .clearfix
+    @include margin-trailer(2)
+    margin: 0 45% * 100 / 1100
+
+.company__item
+    width: 0% + 100 / 6
+    height: 90px
+    float: left
+    line-height: 90px
+    text-align: center
+
+.company__item__pic
+    max-height: 90px
+
+
+.users-say
+    @include margin-leader(1)
+    @include margin-trailer(2)
+
+.users-say__title
+    @include margin-trailer(2)
+    @include adjust-font-size-to(26px, 1)
+    text-align: center
+
+
+.users-say__content__col
+    @extend .span-1
+
+    &:first-child
+        @extend .span-1f
+
+
+.users-say__content__item
+    @include margin-trailer(2)
+    @include adjust-font-size-to(13px)
+    color: #66666e
+
+.users-say__content__item__title
+    font-weight: 700
+
+.users-say__content__item__info
+    text-align: center
+    line-height: 18px
+
+
+.users-say__content__item__info__pic
+    border-radius: 100%
+    @include margin-leader(1/3)
+    @include margin-trailer(1/3)
+    
+.users-say__content__item__info__name
+    display: block
+    color: #de4751
+
+.users-say__content__item__info__job
+    color: #929191
