--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,242 +1,70 @@
-/* line 5, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
+/*
+Error: It's not clear which file to import for '@import "base"'.
+       Candidates:
+         _base.sass
+         base.sass
+       Please delete or rename all but one of these files.
+        on line 8 of /Applications/MAMP/htdocs/ouzzle/lib/sass/style.sass
 
-/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
-}
+3: 
+4: @import compass
+5: 
+6: @import compass/reset
+7: 
+8: @import base
+9: 
+10: @import page/header
+11: @import page/footer
+12: @import page/sidebar
+13: 
 
-/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
-}
-
-/* line 106, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/typography/_vertical_rhythm.scss */
-html {
-  font-size: 100%;
-  line-height: 1.5em;
-}
-
-/* line 10, ../sass/_base.sass */
-body {
-  color: #66666e;
-  font-family: "Open Sans", Verdana, Tahoma, Arial, sans-serif;
-}
-
-/* line 16, ../sass/_base.sass */
-p {
-  word-break: break-all;
-  word-break: break-word;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
-/* line 19, ../sass/_base.sass */
-a {
-  text-decoration: none;
-  color: #26bab2;
-}
-/* line 4, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets/compass/typography/links/_hover-link.scss */
-a:hover, a:focus {
-  text-decoration: underline;
-}
-/* line 23, ../sass/_base.sass */
-a:hover {
-  color: #f1656f;
-  text-decoration: none;
-}
-
-/* line 27, ../sass/_base.sass */
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/* line 32, ../sass/_base.sass */
-button,
-input[type=submit] {
-  cursor: pointer;
-}
-
-/* line 36, ../sass/_base.sass */
-strong {
-  font-weight: 700;
-}
-
-/* line 41, ../sass/_base.sass */
-.clearfix:after {
-  content: " ";
-  width: 0;
-  height: 0;
-  display: table;
-  font-size: 0;
-  line-height: 0;
-  visibility: hidden;
-  clear: both;
-}
-
-/* line 52, ../sass/_base.sass */
-.animate, .modal_bg {
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-/************************************************************************************
- * Modal window
- ************************************************************************************ */
-/* line 4, ../sass/_modal.sass */
-.modal_bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  overflow: auto;
-  padding: 10px;
-  visibility: hidden;
-  opacity: 0;
-  background: rgba(0, 0, 0, 0.71);
-  z-index: 100;
-  -webkit-overflow-scrolling: touch;
-  -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
-  animation-duration: 1s;
-}
-
-/* line 23, ../sass/_modal.sass */
-.modal_bg.visible {
-  visibility: visible !important;
-  opacity: 1 !important;
-}
-
-/* line 28, ../sass/_modal.sass */
-.modal_window {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  max-width: 90%;
-  min-width: 20%;
-  max-height: 98%;
-  width: 404px;
-  margin: auto;
-  padding: 10px 22px;
-  opacity: 0;
-  display: table;
-  overflow: auto;
-  visibility: hidden;
-  background-color: #fff;
-  z-index: 102;
-  -webkit-transform: scale(0.7);
-  -moz-transform: scale(0.7);
-  transform: scale(0.7);
-  -webkit-transition: transform 0.4s ease;
-  -moz-transition: transform 0.4s ease;
-  -o-transition: transform 0.4s ease;
-  transition: transform 0.4s ease;
-}
-/* line 56, ../sass/_modal.sass */
-.modal_window--full {
-  max-width: 960px;
-  width: auto;
-  padding: 6px 30px 20px;
-}
-
-/* line 61, ../sass/_modal.sass */
-.modal_window.visible {
-  visibility: visible !important;
-  opacity: 1 !important;
-  -webkit-transform: scale(1) !important;
-  -moz-transform: scale(1) !important;
-  transform: scale(1) !important;
-}
-
-/* line 70, ../sass/_modal.sass */
-.modal__title {
-  margin: 10px 0;
-  text-align: center;
-  font-size: 21px;
-  font-weight: 700;
-}
-
-/* line 77, ../sass/_modal.sass */
-.modal_window input,
-.modal_window textarea,
-.modal_window select,
-.modal_window option {
-  width: 100%;
-  height: 46px;
-  margin: 9px 0;
-  padding: 0 20px;
-  line-height: 46px;
-  box-sizing: border-box;
-  font-size: 21px;
-  font-weight: 300;
-  border: 1px solid #dedede;
-  border-radius: 0;
-}
-/* line 92, ../sass/_modal.sass */
-.modal_window textarea {
-  min-height: 156px;
-  padding: 15px 20px;
-  line-height: 1;
-}
+Backtrace:
+/Applications/MAMP/htdocs/ouzzle/lib/sass/style.sass:8
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/import_node.rb:66:in `rescue in import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/import_node.rb:45:in `import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:301:in `visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/tree/root_node.rb:20:in `render'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/engine.rb:268:in `render'
+/Library/Ruby/Gems/2.0.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
+/Library/Ruby/Gems/2.0.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
+/Library/Ruby/Gems/2.0.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:209:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.9/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/sass_compiler.rb:40:in `compile!'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/commands/update_project.rb:49:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/commands/base.rb:18:in `execute'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/commands/project_base.rb:19:in `execute'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/bin/compass:30:in `block in <top (required)>'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/bin/compass:44:in `call'
+/Library/Ruby/Gems/2.0.0/gems/compass-1.0.1/bin/compass:44:in `<top (required)>'
+/usr/bin/compass:23:in `load'
+/usr/bin/compass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: It's not clear which file to import for '@import \"base\"'.\A        Candidates:\A          _base.sass\A          base.sass\A        Please delete or rename all but one of these files.\A         on line 8 of /Applications/MAMP/htdocs/ouzzle/lib/sass/style.sass\A \A 3: \A 4: @import compass\A 5: \A 6: @import compass/reset\A 7: \A 8: @import base\A 9: \A 10: @import page/header\A 11: @import page/footer\A 12: @import page/sidebar\A 13: "; }
